- General:
	- Fix packaging issue in recent releases that contain incorrect capitalisation of certain files and folders.
	- Adjust capitalization of "sounds" folders for parts to be consistent.
	- Fix memory leaks caught by KSPCF.
	- Make wheels susceptible to bullets and explosions too.
- Competition:
	- Fix exception in auto-resuming tournaments when SpawnProbe.craft isn't found.
- Weapons:
	- Fix FXLookAtConstraint modules on various turrets.
	- Fix incorrect charge sound path for lasers.
	- Make the ABL use proper looping audio and add a cool-down sound.
	- Fix the ABL laser beam continuing to show while overheated when used manually.

v1.5.1.2
FIXES
- Fix adjustable armor unclamped scaling.
- Loosen distance checks for anti-radiation missiles fired at fast-moving targets (fixes instances when AI would not fire anti-radiation missiles at fast-moving targets).
- Fixes for some issues occuring on KSP 1.9.

v1.5.1.1
FIXES
- Fix AI not firing anti-radiation missiles at targets detected via RWR.
- Fix KeyNotFoundException error in weapon selection code.

v1.5.1.0
IMPROVEMENTS / FIXES
- General:
	- Remove the "-pre" from the version string, fix some typos.
- AI:
	- Allow a vessel that's lost parts after launch to still be auto-tuned.
	- Don't reset the assigned fly-to position when arriving at an orbiting point so that planes actually orbit the targeted point.
	- Resume various pilot commands if interrupted once the cause of the interruption is removed.
	- Adjust the fly-to point's altitude closer to the default altitude when at longer ranges so planes with higher default altitudes will attack from above and vice-versa.
	- Reduce the half-life of the velocity smoothing for the turn radius calculation to allow faster updates for terrain avoidance.
	- AI can now fire antirad missiles at targets detected via RWR.
	- Fix AI not firing heatseekers.
	- Fix launch authorisation check throwing an NRE for modular missiles.
	- Further fix to bombs ignoring max missiles/tge.