@@ -6,11 +6,15 @@
 	- Make wheels susceptible to bullets and explosions too.
 - Competition:
 	- Fix exception in auto-resuming tournaments when SpawnProbe.craft isn't found.
+- Detectors:
+	- Fix IRST preventing Radar GUI close.
+	- Fix NRE in targeting camera when the camera parent transform is null.
 - Weapons:
 	- Fix FXLookAtConstraint modules on various turrets.
 	- Fix incorrect charge sound path for lasers.
 	- Make the ABL use proper looping audio and add a cool-down sound.
 	- Fix the ABL laser beam continuing to show while overheated when used manually.
+	- Fix for NRE when heatseeker is manually selected prior to activating guard mode.
 
 v1.5.1.2
 FIXES
